# kittenhiRS

./: LICENSE  README.md  update.py
khrs/: Cargo.toml
khrs/configs/: configs.json
khrs/src/: bootup_and_closing.rs  cmd_ln.rs  db_drive.rs  dt_manip.rs  gui_vis.rs  handeling.rs  lib.rs  main.rs  messages.rs  universals.rs  user.rs
khrs/src/cmd_ln/: admin.rs  edit.rs  view.rs
khrs/src/user/: cmd_ln.rs  scan.rs
