[package]
name = "khrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.196"
serde_json = "1.0.112"
bardecoder = "0.5.0"
image = "0.24"
nokhwa = {version = "0.10.4", features = ["input-native"]}